--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ video {
   object-fit: contain;
 }
 
-/* Progress bar (sama) */
+/* Progress bar */
 .progress-container {
   height: 6px;
   background: #111827;
@@ -90,7 +90,7 @@ video {
   pointer-events: none;
 }
 
-/* Controls */
+/* Controls rata */
 .controls {
   display: flex;
   justify-content: space-between;
@@ -158,109 +158,68 @@ select {
   cursor: pointer;
 }
 
-/* Shared Popup Style (untuk welcome & full konten) */
-.popup-shared {
+/* Popup FULL KONTEN - animasi lebih halus */
+.popup {
   position: fixed;
   inset: 0;
   display: none;
   justify-content: center;
-  align-items: center;
-  z-index: 1001;
-  background: rgba(0,0,0,0.7);
+  align-items: flex-end;
+  z-index: 999;
+  background: rgba(0,0,0,0.65);
   backdrop-filter: blur(4px);
 }
 
-.popup-shared.show {
+.popup.show {
   display: flex;
 }
 
-.popup-shared .box {
-  width: 90%;
-  max-width: 460px;
+.popup-box {
+  width: 92%;
+  max-width: 480px;
+  max-height: 75vh;
   background: #0b1020;
-  border-radius: 20px;
-  padding: 28px 24px;
-  box-shadow: 0 20px 50px rgba(0,0,0,0.6);
-  transform: translateY(40px) scale(0.92);
+  border-radius: 20px 20px 0 0;
+  padding: 24px 20px;
+  overflow-y: auto;
+  transform: translateY(30px) scale(0.95);
   opacity: 0;
-  transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.45s cubic-bezier(0.34, 1.56, 0.64, 1);
+  box-shadow: 0 -10px 30px rgba(0,0,0,0.5);
 }
 
-.popup-shared.show .box {
+.popup.show .popup-box {
   transform: translateY(0) scale(1);
   opacity: 1;
 }
 
-/* Welcome-specific */
-.welcome-box p {
-  font-size: 16px;
-  line-height: 1.5;
-  text-align: center;
-  margin: 0 0 16px;
-}
-
-.welcome-box a {
-  color: var(--accent);
-  text-decoration: underline;
-  font-weight: 600;
-}
-
-.close-btn {
-  position: absolute;
-  top: 16px;
-  right: 20px;
-  font-size: 28px;
-  color: var(--muted);
-  cursor: pointer;
-  background: none;
-  border: none;
-}
-
-.close-btn:hover { color: #fff; }
-
-/* FULL KONTEN Popup */
-#fullPopup {
-  align-items: flex-end;
-}
-
-#fullPopup .box {
-  border-radius: 20px 20px 0 0;
-  max-height: 80vh;
-  overflow-y: auto;
-  padding: 24px 20px;
-}
-
 .tutorial {
-  margin-bottom: 24px;
-  padding: 18px;
-  background: rgba(59,130,246,0.12);
-  border-radius: 14px;
-  border: 1px solid rgba(59,130,246,0.35);
+  margin-bottom: 20px;
+  padding: 16px;
+  background: rgba(59,130,246,0.1);
+  border-radius: 12px;
+  border: 1px solid rgba(59,130,246,0.3);
 }
 
 .tutorial h3 {
-  font-size: 17px;
-  margin: 0 0 14px;
+  font-size: 16px;
+  margin: 0 0 12px;
   color: var(--accent);
-  font-weight: 600;
 }
 
 .tutorial p {
-  margin: 10px 0;
-  font-size: 14.5px;
-  line-height: 1.6;
+  margin: 8px 0;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
-.tutorial strong {
-  color: #fff;
-  font-weight: 600;
-}
+.tutorial strong { color: #fff; }
 
 /* Link download */
 .popup-box a {
   display: block;
-  margin: 14px 0;
-  padding: 15px;
+  margin: 12px 0;
+  padding: 14px;
   background: #111827;
   border: 1px solid var(--border);
   border-radius: 12px;
@@ -268,26 +227,28 @@ select {
   text-decoration: none;
   text-align: center;
   font-size: 15px;
-  transition: all 0.2s;
+  transition: background 0.2s;
 }
 
-.popup-box a:hover {
-  background: #1a2234;
-  transform: translateY(-2px);
-}
+.popup-box a:hover { background: #1f2937; }
 
-/* Snow */
+/* Snow & welcome popup sama seperti sebelumnya (ga gue ubah) */
 .snow { position: fixed; inset: 0; pointer-events: none; z-index: 1000; }
 .snowflake { position: absolute; top: -10px; width: 10px; height: 10px; background: white; border-radius: 50%; opacity: 0.8; animation: fall linear infinite; }
 @keyframes fall { to { transform: translateY(100vh) rotate(360deg); } }
+
+.welcome-popup { position: fixed; inset: 0; background: rgba(0,0,0,0.7); display: flex; justify-content: center; align-items: center; z-index: 1001; }
+.welcome-box { width: 90%; max-width: 400px; background: #0b1020; border-radius: 16px; padding: 24px; position: relative; text-align: center; box-shadow: 0 10px 30px rgba(0,0,0,0.6); }
+.close-btn { position: absolute; top: 12px; right: 16px; font-size: 24px; color: var(--muted); cursor: pointer; background: none; border: none; }
+.close-btn:hover { color: #fff; }
+.welcome-box p { margin: 0 0 16px; font-size: 16px; }
+.welcome-box a { color: var(--accent); text-decoration: underline; font-weight: 600; }
 
 @media (max-width: 480px) {
   .controls { max-width: 280px; gap: 8px; }
   .ctrl, select { width: 40px; height: 40px; }
   .play-btn { width: 64px; height: 64px; }
   .play-btn svg { width: 30px; height: 30px; }
-  .tutorial h3 { font-size: 16px; }
-  .tutorial p { font-size: 14px; }
 }
 </style>
 </head>
@@ -324,23 +285,21 @@ select {
   </div>
 </div>
 
-<!-- FULL KONTEN Popup -->
-<div id="fullPopup" class="popup-shared">
-  <div class="box" id="popupBox"></div>
+<div id="popup" class="popup">
+  <div class="popup-box" id="popupBox"></div>
 </div>
 
-<!-- Welcome Popup -->
-<div id="welcomePopup" class="popup-shared">
-  <div class="box welcome-box">
+<div id="snowContainer" class="snow"></div>
+
+<div id="welcomePopup" class="welcome-popup">
+  <div class="welcome-box">
     <button class="close-btn" id="closeWelcome">×</button>
     <p>Selamat menonton dan menikmati para colikiawan,<br>kalo suka jangan lupa SUBSCRIBE Youtube <a href="https://youtube.com/@narapoi" target="_blank">@Narapoi</a></p>
   </div>
 </div>
 
-<div id="snowContainer" class="snow"></div>
-
 <script>
-// SCRIPT
+// SCRIPT (sama seperti sebelumnya + update popup)
 const id = new URLSearchParams(location.search).get('v');
 let allowPlay = false;
 
@@ -353,7 +312,9 @@ if (!localStorage.getItem(viewKey)) {
 }
 
 const viewsElement = document.getElementById('views');
-if (viewsElement) viewsElement.textContent = localStorage.getItem(viewKey) + ' views';
+if (viewsElement) {
+  viewsElement.textContent = localStorage.getItem(viewKey) + ' views';
+}
 
 fetch('/videos').then(r => r.json()).then(videos => {
   if (!id || !videos[id]) return;
@@ -362,9 +323,13 @@ fetch('/videos').then(r => r.json()).then(videos => {
   title.textContent = v.title;
   player.src = v.src;
 
-  player.addEventListener('play', () => { if (!allowPlay) allowPlay = true; });
+  player.addEventListener('play', () => {
+    if (!allowPlay) {
+      allowPlay = true;
+    }
+  });
 
-  // Progress & controls (sama seperti sebelumnya)
+  // PROGRESS BAR & CONTROLS (dipendekin biar fokus ke popup)
   const progressContainer = document.getElementById('progressContainer');
   const progressBar = document.getElementById('progress');
   const handle = document.getElementById('handle');
@@ -417,7 +382,7 @@ fetch('/videos').then(r => r.json()).then(videos => {
   fs.onclick = () => !document.fullscreenElement ? player.requestFullscreen() : document.exitFullscreen();
   speed.onchange = e => player.playbackRate = parseFloat(e.target.value);
 
-  // FULL KONTEN POPUP
+  // FULL KONTEN POPUP dengan tutorial
   openFull.onclick = () => {
     popupBox.innerHTML = `
       <div class="tutorial">
@@ -435,7 +400,7 @@ fetch('/videos').then(r => r.json()).then(videos => {
       popupBox.appendChild(a);
     });
 
-    document.getElementById('fullPopup').classList.add('show');
+    popup.classList.add('show');
 
     // Salju
     const snowContainer = document.getElementById('snowContainer');
@@ -449,25 +414,22 @@ fetch('/videos').then(r => r.json()).then(videos => {
       flake.style.opacity = Math.random() * 0.5 + 0.5;
       snowContainer.appendChild(flake);
     }
-    setTimeout(() => snowContainer.innerHTML = '', 8000);
+    setTimeout(() => { snowContainer.innerHTML = ''; }, 8000);
   };
 
-  // Tutup popup kalau klik luar
   document.addEventListener('click', e => {
-    if (e.target.classList.contains('popup-shared')) {
-      e.target.classList.remove('show');
-    }
+    if (e.target.classList.contains('popup')) popup.classList.remove('show');
   });
 });
 
 // Welcome popup
 if (!localStorage.getItem('welcomed')) {
-  document.getElementById('welcomePopup').classList.add('show');
+  document.getElementById('welcomePopup').style.display = 'flex';
   localStorage.setItem('welcomed', 'true');
 }
 
 document.getElementById('closeWelcome').onclick = () => {
-  document.getElementById('welcomePopup').classList.remove('show');
+  document.getElementById('welcomePopup').style.display = 'none';
 };
 </script>
 
