--- a/views.html
+++ b/views.html
@@ -5,11 +5,15 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Preparing Link…</title>
 
+<!-- POPUNDER -->
+<script data-cfasync="false" async type="text/javascript" src="//bd.streitetymon.com/rabYYfZMbeXhPl/131146"></script>
+
 <style>
 :root{
   --bg:#05060f;
   --card:#0b1020;
   --accent:#3b82f6;
+  --accent2:#22c55e;
   --muted:#94a3b8;
   --border:#1e293b;
 }
@@ -26,8 +30,8 @@ body{
 }
 .card{
   width:100%;
-  max-width:360px;
-  background:rgba(11,16,32,.88);
+  max-width:380px;
+  background:rgba(11,16,32,.9);
   backdrop-filter:blur(14px);
   padding:28px;
   border-radius:22px;
@@ -59,37 +63,30 @@ p{
   margin:10px 0;
 }
 button{
-  margin-top:18px;
+  margin-top:14px;
   width:100%;
   padding:14px;
   border-radius:14px;
   border:0;
-  background:linear-gradient(135deg,#2563eb,#3b82f6);
-  color:#fff;
   font-size:15px;
   font-weight:600;
   cursor:pointer;
+}
+#go{
+  background:linear-gradient(135deg,#2563eb,#3b82f6);
+  color:#fff;
   opacity:.6;
 }
-button.active{
-  opacity:1;
+#go.active{opacity:1}
+#promo{
+  background:linear-gradient(135deg,#16a34a,#22c55e);
+  color:#052e16;
 }
 small{
   display:block;
   margin-top:14px;
   font-size:12px;
   color:#64748b;
-}
-.ad-slot{
-  margin-top:18px;
-  height:60px;
-  border:1px dashed #1e293b;
-  border-radius:12px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:12px;
-  color:#475569;
 }
 </style>
 </head>
@@ -105,12 +102,8 @@ small{
 
   <button id="go" disabled>Lanjutkan</button>
 
-  <!-- SLOT IKLAN OPTIONAL -->
-  <!--
-  <div class="ad-slot">
-    Iklan tampil di sini
-  </div>
-  -->
+  <!-- PROMO BUTTON -->
+  <button id="promo" onclick="join()">Jangan lupa join saluran</button>
 
   <small>Klik tombol setelah waktu habis</small>
 </div>
@@ -126,7 +119,7 @@ function decode(x){
 
 const url=decode(r);
 if(!url || !url.startsWith("http")){
-  document.body.innerHTML="<h3 style='color:white'>Link tidak valid</h3>";
+  document.body.innerHTML="<h3 style='color:white'>❌ Link tidak valid</h3>";
   throw "";
 }
 
@@ -150,6 +143,13 @@ btn.onclick=()=>{
     location.href=url;
   }
 };
+
+function join(){
+  window.open(
+    "https://whatsapp.com/channel/0029VbB7Avc6WaKoD2yD9M3t",
+    "_blank"
+  );
+}
 </script>
 
 </body>
