--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ select {
 <div id="welcomePopup" class="welcome-popup">
   <div class="welcome-box">
     <button class="close-btn" id="closeWelcome">×</button>
-    <p>Selamat menonton dan menikmati para colikiawan,<br>kalo suka jangan lupa SUBSCRIBE Youtube <a href="https://youtube.com/@phidey-local" target="_blank">@Narapoi</a></p>
+    <p>Selamat menonton dan menikmati para colikiawan,<br>kalo suka jangan lupa SUBSCRIBE Youtube <a href="https://youtube.com/@narapoiofficial" target="_blank">@Narapoi</a></p>
   </div>
 </div>
 
